--- a/turing.html
+++ b/turing.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>For Alan Turing</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css
+
+">
 </head>
 <body>
 <div class="container">
