--- a/turing.html
+++ b/turing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Alan Turing</title>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css
 
 ">
 </head>
