--- a/turing.html
+++ b/turing.html
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-xs-12">
-                <h1 class="text-center">Alan Tur</h1>
+                <h1 class="text-center">Alan and Tur</h1>
                 <h2 class="text-center"> the father of theoretical computer science and artificial intelligence</h2>
                 <div class="thumbnail">
                     <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/a1/Alan_Turing_Aged_16.jpg" alt="">
