--- a/turing.html
+++ b/turing.html
@@ -5,6 +5,7 @@
     <title>Alan Turing</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="turing.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
 <div class="container">
