--- a/turing.html
+++ b/turing.html
@@ -5,14 +5,13 @@
     <title>Alan Turing</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="turing.css">
-    <link rel="stylesheet" href="">
 </head>
 <body>
 <div class="container">
     <div class="jumbotron">
         <div class="row">
             <div class="col-xs-12">
-                <h1 class="text-center">Alan and Turing</h1>
+                <h1 class="text-center">Alan Turing</h1>
                 <h2 class="text-center"> the father of theoretical computer science and artificial intelligence</h2>
                 <div class="thumbnail">
                     <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/a1/Alan_Turing_Aged_16.jpg" alt="">
